tdf#97963: Impose size limit on all 3 edit windows

Doing it for 1 window (tdf#90257) isn't enough, the dialog will grow
outta screen with large fonts not immediately, but on the next opening

Change-Id: I890ecd91a00efc4c7596b30a237f5abb4f87215a